crates/snapshot-tests/tests/snapshots/parser__require_newlines__basic.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: contains non-digit character at `0`
  ┌─ basic:1:4
  │
1 │ 0=0r=false
  │    ^ invalid integer: contains non-digit character


error: invalid integer: contains non-digit character at `0`
 --> basic:1:4
  |
1 | 0=0r=false
  |    ^ invalid integer: contains non-digit character
Error {
    kind: "InvalidInteger",
    message: "invalid integer: contains non-digit character",
    span: 3..4,
    path: Some(
        "0",
    ),
}
