crates/snapshot-tests/tests/snapshots/parser__require_newlines__strings.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected newline, found an identifier at `0`
  ┌─ strings:2:5
  │
2 │ 0=""o=""m=""r=""00="0"q="""0"""e="""0"""
  │     ^ expected newline
