crates/snapshot-tests/tests/snapshots/parser__require_newlines__tables.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected newline, found a left bracket at `0000l0[0].0`
  ┌─ tables:3:6
  │
3 │ 0="0"[[0000l0]]
  │      ^ expected newline
